# CppZerotoAdvance2018

./: .gitignore  AreaTriangulo  AreaTriangulo.cpp  README.md  SpheraVolume  SpheraVolume.cpp
BjarneStroustrupCppBook2013/customTypes/: classes1.cpp
BjarneStroustrupCppBook2013/memory/: makeSharedPtr.cpp
BjarneStroustrupCppBook2013/structs/: structs1.cpp
BjarneStroustrupCppBook2013/vectorClass/: build.sh
CmathLib/: CmathLib.cbp  CmathLib.layout  main.cpp
Constantes/: main.cpp
FirstProject/: FirstProject.cbp  FirstProject.layout  main.cpp
OperacionesBasicas/: OperacionesBasicas.depend  main.cpp
SecondProject/: SecondProject.cbp  SecondProject.layout  main.cpp
Variables/: Variables.depend  Variables.layout  main.cpp
advanced/OOP/: introOOP.cpp
advanced/OOP/SoccerSimulator/: CMakeLists.txt  Instrucciones.txt  main.cpp
advanced/OOP/SoccerSimulator/Entrenador/: Entrenador.cpp  Entrenador.h
advanced/OOP/SoccerSimulator/Futbolista/: Futbolista.cpp  Futbolista.h
advanced/OOP/SoccerSimulator/Medico/: Medico.cpp  Medico.h
advanced/OOP/SoccerSimulator/Persona/: Persona.cpp  Persona.h
advanced/OOP/multipleInheritanceTroubleshooting/: CMakeLists.txt  main.cpp
advanced/OOP/multipleInheritanceTroubleshooting/ClaseBase1/: ClaseBase1.cpp  ClaseBase1.h
advanced/OOP/multipleInheritanceTroubleshooting/ClaseBase2/: ClaseBase2.cpp  ClaseBase2.h
advanced/OOP/multipleInheritanceTroubleshooting/ClaseDerivada/: ClaseDerivada.cpp  ClaseDerivada.h
advanced/punteros/: vocals.cpp  (+19 more)
basic/: SpheraVolume
test4Eclipse/: .project  main.cpp
thirthProject/: .project
(+246 files in other folders)
